force-app/main/default/objects/sugati__Supplier_Booking_Discount__c/sugati__Supplier_Booking_Discount__c.object-meta.xml
<CustomObject>
    <label>Supplier Booking Discount</label>
    <nameField>
        <label>Supplier Booking Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Booking Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>