force-app/main/default/objects/sugati__Supplier_Booking_Discount__c/fields/sugati__Discount__c.field-meta.xml
<CustomField>
    <fullName>sugati__Discount__c</fullName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>