force-app/main/default/objects/sugati__Supplier_Booking_Discount__c/fields/sugati__Discount_Config__c.field-meta.xml
<CustomField>
    <fullName>sugati__Discount_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Config</label>
    <referenceTo>sugati__Discount_Config__c</referenceTo>
    <relationshipLabel>Supplier Booking Discounts</relationshipLabel>
    <relationshipName>Supplier_Booking_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>