force-app/main/default/objects/sugati__Supplier_Booking_Discount__c/fields/sugati__DiscountP__c.field-meta.xml
<CustomField>
    <fullName>sugati__DiscountP__c</fullName>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>