force-app/main/default/objects/sugati__Supplier_Booking_Discount__c/fields/sugati__Supplier_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__Supplier_Booking__c</fullName>
    <label>Supplier Booking</label>
    <referenceTo>sugati__Supplier_Booking__c</referenceTo>
    <relationshipLabel>Supplier Booking Discounts</relationshipLabel>
    <relationshipName>Supplier_Booking_Discounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>