force-app/main/default/objects/sugati__Supplier_Booking_Discount__c/fields/sugati__Title__c.field-meta.xml
<CustomField>
    <fullName>sugati__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>