force-app/main/default/objects/sugati__Supplier_Booking_Discount__c/fields/sugati__Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>sugati__Total_Discount__c</fullName>
    <formula>If(TEXT(sugati__Type__c) == &apos;%&apos;, sugati__DiscountP__c* sugati__Supplier_Booking__r.sugati__SB_Marked_Up_Cost__c , sugati__Discount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>